--- a/BooksShop/BooksShop/Views/Shared/_Layout.cshtml
+++ b/BooksShop/BooksShop/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" lang="ru"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - BooksShop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -11,8 +11,9 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <a class="navbar-brand" asp-area="" asp-controller="Autors" asp-action="Autors">Авторы</a>
-            <a class="navbar-brand" asp-area="" asp-controller="Books" asp-action="Books">Книги</a>
+            <a class="navbar-brand" asp-controller="Autors" asp-action="Autors">Авторы</a>
+            <a class="navbar-brand" asp-controller="Books" asp-action="Books">Книги</a>
+            <a class="navbar-brand" asp-controller="ExelToFromDb" asp-action="Index">Excel</a>
         </nav>
     </header>
 
