--- a/BooksShop/BooksShop/Views/Autors/Autors.cshtml
+++ b/BooksShop/BooksShop/Views/Autors/Autors.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewData["Title"] = "Авторы";
+
+    //Если представление может вызывать действия, требующие источник запроса,
+    //ViewData["Source"] его хранит
     ViewData["Source"] = "/Autors/Autors/";
 }
 
