--- a/BooksShop/BooksShop/Views/Books/Books.cshtml
+++ b/BooksShop/BooksShop/Views/Books/Books.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewData["Title"] = "Книги";
+
+    //Если представление может вызывать действия, требующие источник запроса,
+    //ViewData["Source"] его хранит
     ViewData["Source"] = "/Books/Books";
 }
 
