--- a/BooksShop/BooksShop/Views/Books/Read.cshtml
+++ b/BooksShop/BooksShop/Views/Books/Read.cshtml
@@ -2,9 +2,13 @@
 
 @{
     ViewData["Title"] = Model.Title;
+
+    //Если представление может вызывать действия, требующие источник запроса,
+    //ViewData["Source"] его хранит
     ViewData["Source"] = "/Books/Read/" + Model.Id;
 }
 
+@* Основные данные о книге с возможностью ее удаления и изменения *@
 <h2>@ViewData["Title"] | @Model.Edition</h2>
 <p>
     Издательство: @Model.PublishedAt
@@ -15,10 +19,13 @@
 <p>
     <a asp-action="Update" asp-route-id="@Model.Id" asp-route-source=@ViewData["Source"]>Изменить</a>
     &nbsp&nbsp&nbsp&nbsp
+    @* Если действие приведет к невозможности возвращения на страницу источника, *@
+    @* не нужно его указывать, чтобы действие вернуло страницу по умолчанию *@
     <a asp-action="Delete" asp-route-id="@Model.Id" asp-route-source=@null>Удалить</a>
 </p>
 
 
+@* Список авторов книги *@
 <br />
 <h4>Авторы</h4>
 <table class="table">
