--- a/BooksShop/BooksShop/Views/Books/Update.cshtml
+++ b/BooksShop/BooksShop/Views/Books/Update.cshtml
@@ -7,7 +7,8 @@
 <div class="card text-center">
     <div class="card-header text-center"><h4>@ViewData["Title"]</h4></div>
     <div class="card-body">
-        <form asp-action="Update" asp-route-source=@ViewData["Source"]  method="post" class="m-4">
+        @* Т.к. форма вернется в Post метод, ему нужно передать источник запроса, который вызвал Get метод *@
+        <form asp-action="Update" asp-route-source=@ViewData["Source"] method="post" class="m-4">
 
             <div class="form-group">
                 <label asp-for="Title">Название:</label>
@@ -30,11 +31,15 @@
                 <textarea class="form-control" asp-for="Description"></textarea>
             </div>
 
+            @* Список авторов вернется не в модели, а в Request.Form["Autors"], при этом индексы будут
+                храниться как строки*@
             <div class="form-group">
                 <label>Автор:</label>
                 <select class="form-control" name="Autors" size="4" multiple>
+                    @* Предоставляем список всех авторов *@
                     @foreach (Autor item in ViewBag.Autors)
                     {
+                        //Устанавливаем selected для текущих книги ViewBag.Owners
                         if (ViewBag.Owners.Contains(item.Id))
                         {
                             <option selected value=@item.Id>@item.Name</option>
