--- a/BooksShop/BooksShop/Views/Shared/_Layout.cshtml
+++ b/BooksShop/BooksShop/Views/Shared/_Layout.cshtml
@@ -1,14 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="utf-8" lang="ru"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>@ViewData["Title"] - BooksShop</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <script src="~/js/jquery-bundle.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="~/css/site.min.css" />
+
+    <script src="~/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" type="text/javascript"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
+
 </head>
+
+
 <body>
+
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <a class="navbar-brand" asp-controller="Autors" asp-action="Autors">Авторы</a>
@@ -25,8 +35,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - BooksShop
+            2021 - BooksShop
         </div>
     </footer>
+
 </body>
 </html>
