--- a/BooksShop/BooksShop/Views/Shared/_Layout.cshtml
+++ b/BooksShop/BooksShop/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <a class="navbar-brand" asp-controller="Autors" asp-action="Autors">Авторы</a>
             <a class="navbar-brand" asp-controller="Books" asp-action="Books">Книги</a>
-            <a class="navbar-brand" asp-controller="ExelToFromDb" asp-action="Excel">Excel</a>
+            <a class="navbar-brand" asp-controller="ExcelToFromDb" asp-action="Excel">Excel</a>
         </nav>
     </header>
 
