--- a/BooksShop/BooksShop/Views/ExcelToFromDb/Excel.cshtml
+++ b/BooksShop/BooksShop/Views/ExcelToFromDb/Excel.cshtml
@@ -10,6 +10,7 @@
         <img src="~/img/FormatExcel.PNG" class="img-fluid"/>
         <pre>
             Укажите в ячейке A1 количество строк с данными, в зеленных строках.
+            Укажите в ячейке B1 количество столбцов с данными, в зеленных строках.
             Заполняйте данные начиная с третьей строки.
             Если вам нужно добавить только авторов, указывайте их в начале до книг, начиная с ячейки Е.
             Если книга имеет несколько авторов, указывайте их на новых строках, но не дублируйте 
